Apply CSS changes to fix issue #327 - Spacing on success metrics header text

--- a/web/themes/custom/spacebase/scss/_projects.scss
+++ b/web/themes/custom/spacebase/scss/_projects.scss
@@ -12,6 +12,7 @@
     .box {
       h4 {
         font-size: 16px;
+        margin: 1.0em 0 0.5em;
       }
     }
   }
